--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="container">
 			<header>
-				<h1>CHAUVINIST</h1>
+				<h1>CHAUVINdIST</h1>
 				<p></p>
 			</header>
 			<section class="main"></section>
